# Verify-Captcha

./: main.py  pyproject.toml  requirements.txt
bot/: bot.py  utils.py
bot/setting/: __init__.py  config.py  link_b.py
web/: Webhook.py  app.py  utils.py
web/setting/: config.py
web/templates/: failed.html  index.html  success.html  templates.html
